# rusty_hermes

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  docs.yml
examples/: advanced.rs  derive.rs  hello.rs  host_functions.rs  objects_and_arrays.rs  prototypes.rs
libhermes-sys/: Cargo.toml  README.md  build.rs
libhermes-sys/src/: binding.hpp  lib.rs
libhermes-sys/tests/: jsi.rs  runtime.rs
libhermesabi-sys/: Cargo.toml  README.md  build.rs  wrapper.h
libhermesabi-sys/examples/: demo.js  host_functions.rs
libhermesabi-sys/src/: binding.cc  binding.hpp  lib.rs
libhermesabi-sys/src/bindings/: binding.cc
libhermesabi-sys/tests/: jsi.rs  runtime.rs
rusty_hermes_macros/: Cargo.toml
rusty_hermes_macros/src/: from_js.rs  into_js.rs  lib.rs  op.rs
src/: array.rs  array_buffer.rs  bigint.rs  convert.rs  error.rs  function.rs  lib.rs  object.rs  prepared_js.rs  propnameid.rs  scope.rs  string.rs  symbol.rs  value.rs  weak_object.rs
tests/: api.rs  derive.rs  ops.rs
