[package]
name = "rusty_hermes"
description = "Rust wrapper for Facebook's Hermes JavaScript engine"
version = "0.1.0"
edition = "2021"
authors = ["Rust Hermes, Mish Ushakov <mishushakov@users.noreply.github.com>"]
repository = "https://github.com/rust-hermes/rusty_hermes"
license = "MIT"
categories = [ "API bindings" ]
keywords = ["javascript", "hermes", "v8", "jsc", "spidermonkey", "engine", "scripting"]

[workspace]
members = ["libhermesabi-sys"]

[dependencies]
libhermesabi-sys = { path = "libhermesabi-sys" }
