[package]
name = "rusty_hermes"
description = "Rust wrapper for Facebook's Hermes JavaScript engine"
version = "0.3.0"
edition = "2021"
authors = ["Rust Hermes, Mish Ushakov <mishushakov@users.noreply.github.com>"]
repository = "https://github.com/rust-hermes/rusty_hermes"
license = "MIT"
categories = ["api-bindings"]
keywords = ["javascript", "hermes", "v8", "jsc", "spidermonkey"]

[workspace]
members = ["libhermesabi-sys", "rusty_hermes_macros"]

[dependencies]
libhermesabi-sys = { path = "libhermesabi-sys", version = "0.4.0" }
rusty_hermes_macros = { path = "rusty_hermes_macros", version = "0.1.0" }

[dev-dependencies]
rusty_hermes_macros = { path = "rusty_hermes_macros", version = "0.1.0" }
