[package]
name = "libhermes-sys"
description = "C bindings for Hermes JavaScript engine"
version = "0.4.0"
edition = "2024"
links = "hermes"
authors = ["Rust Hermes, Mish Ushakov <mishushakov@users.noreply.github.com>"]
repository = "https://github.com/rust-hermes/rusty_hermes"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  "hermes"
]

[dependencies]

[build-dependencies]
cmake = "0.1"
cc = "1"
